src/test/vm/final_method.php.exp
HipHop Fatal error: Cannot override final method C::f() in src/test/vm/final_method.php on line 12
